Fix image z-index

--- a/style.css
+++ b/style.css
@@ -129,19 +129,8 @@ body {
   z-index: 1;
 }
 
-.alphabet-ring-center {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 1.2rem;
-  color: black;
-  text-align: center;
-  z-index: 10;
-}
-
 .content-image {
-  position: absolute;
+  position: relative;
   opacity: 0;
   transition: opacity 0.7s ease-in-out;
   will-change: transform;
@@ -153,6 +142,17 @@ body {
 
 .preserve-whitespace {
   white-space: pre-wrap;
+}
+
+.alphabet-ring-center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 1.2rem;
+  color: black;
+  text-align: center;
+  z-index: 10;
 }
 
 .animated-image {
